<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TedXCapeTownApplication</string>
    <string name="title_section1">Agenda</string>
    <string name="title_section2">Speakers</string>
    <string name="title_about">About</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_about">About</string>

    <string name="website_heading">The TEDx Cape Town website</string>
    <string name="website_body">To learn more about TEDx Cape Town or to volunteer, speak to event organisers, or subscribe to news about the event, please visit our website, <a href='http://tedxcapetown.org/'>TEDxCapeTown.org</a></string>
    <string name="authors_heading">Application authors</string>
    <string name="authors_body">Andrew Petty\n\nRichard JE Cooke\nAlex Leibhammer\nAndy Spicket\n\n</string>
    <string name="application_heading">About this application</string>
    <string name="application_body">This open source application was written for TEDx Cape Town 2014. We intend it to be reused and extended by other TEDx organisers, or for other similar events.\n\nThe freely available code for this application, the iOS version, and the PHP and MySQL server it uses, are all available and explained on our GitHub site, <a href='https://github.com/tedxct'>GitHub.com/TEDxCT</a></string>

    <string name="title_activity_home">Home Activity</string>
    <string name="hello_world">Hello world</string>
    <string name="title_activity_agenda">Agenda Activity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_more_info">MoreInfoActivity</string>
    <string name="title_activity_speaker_profile">SpeakerProfileActivity</string>
    <string name="title_activity_speaker_list">SpeakerListActivity</string>
    <string name="title_activity_sponsors">SponsorsActivity</string>
    <string name="title_activity_talk">TalkActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="agenda_name">Agenda</string>
    <string name="sponsors_name">Sponsors</string>
    <string name="activity_speaker_profile_speaker_name_generic">Speaker Name</string>
    <string name="activity_speaker_profile_genre_generic">Funky Title</string>
    <string name="activity_speaker_profile_talk_name_generic">Talk Name</string>
    <string name="activity_speaker_profile_lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
    <string name="activity_speaker_profile_twitter_handle_generic">Twitter Handle</string>
    <string name="activity_speaker_profile_email_address_generic">Email Address</string>
    <string name="talk_name">Talk name</string>
    <string name="speaker_name">Speaker name</string>
    <string name="genre">Genre</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
    <string name="listview_session_default_session">Session 0</string>
    <string name="listview_session_default_time">00:00 - 00:00</string>
    <string name="listview_session_speaker_talk_title_generic">Talk Title</string>
    <string name="listview_session_speaker_speaker_generic">Speaker</string>
    <string name="listview_session_speaker_genre_generic">Genre</string>
    <string name="listview_session_speaker_short_description_generic">Loading short description of talk...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

</resources>
