<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_for_headers"
        tools:context="com.tedx.capetown.app.presentation.activity.AboutFragment">

        <TextView
            android:id="@+id/txtWebsiteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/website_heading"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

        <TextView
            android:id="@+id/txtWebsiteContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/website_body"
            android:layout_below="@id/txtWebsiteHeading"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autoLink="all"
        />

        <TextView
            android:id="@+id/txtApplicationHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtWebsiteContent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/application_heading"
            android:layout_marginTop="@dimen/activity_double_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

        <TextView
            android:id="@+id/txtApplicationBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/application_body"
            android:layout_below="@id/txtApplicationHeading"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autoLink="all"
        />

        <TextView
            android:id="@+id/txtAuthorsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtApplicationBody"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/authors_heading"
            android:layout_marginTop="@dimen/activity_double_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

        <TextView
            android:id="@+id/txtAuthorsBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/authors_body"
            android:layout_below="@id/txtAuthorsHeading"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autoLink="all"
        />

    </RelativeLayout>

</ScrollView>