<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tedx.capetown.app.presentation.activity.TalkActivity">

    <TextView
        android:id="@+id/txtTalkName"
        android:textAppearance="@style/TextAppearance.TitleLarge"
        android:text="@string/talk_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imgTalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:scaleType="fitStart"
        android:layout_below="@+id/txtTalkName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/txtGenre"
        android:text="@string/genre"
        android:textAppearance="@style/TextAppearance.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgTalk"
        android:layout_below="@id/txtTalkName"
        android:visibility="gone"
    />

    <TextView
        android:id="@+id/txtDescription"
        android:textAppearance="@style/TextAppearance.TextMedium"
        android:text="@string/lorem_ipsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imgTalk"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/txtSpeakerName"
        android:textAppearance="@style/TextAppearance.TitleSmall"
        android:text="@string/speaker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription"
        android:layout_alignParentRight="true" />


</RelativeLayout>
