<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tedx.capetown.app.presentation.activity.HomeActivity"
    >

    <TextView
        android:id="@+id/txt_home_main"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_agenda_activity"
        android:layout_width="@dimen/home_activity_base_btn_width"
        android:layout_height="wrap_content"
        android:text="@string/agenda_name"
        android:layout_below="@id/txt_home_main"
        />
    <Button
        android:id="@+id/btn_sponsors_activity"
        android:layout_width="@dimen/home_activity_base_btn_width"
        android:layout_height="wrap_content"
        android:text="@string/sponsors_name"
        android:layout_below="@id/btn_agenda_activity"
        />
    <Button
        android:id="@+id/btn_speaker_list_activity"
        android:layout_width="@dimen/home_activity_base_btn_width"
        android:layout_height="wrap_content"
        android:text="Speakers"
        android:layout_below="@id/btn_sponsors_activity"
        />
    <Button
        android:id="@+id/btn_speaker_profile_activity"
        android:layout_width="@dimen/home_activity_base_btn_width"
        android:layout_height="wrap_content"
        android:text="Speaker Profile"
        android:layout_below="@id/btn_speaker_list_activity"
        />
    <Button
        android:id="@+id/btn_talk_profile_activity"
        android:layout_width="@dimen/home_activity_base_btn_width"
        android:layout_height="wrap_content"
        android:text="Talk"
        android:layout_below="@id/btn_speaker_profile_activity"
        />

</RelativeLayout>
